# tvdcn

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  build_ext.bat  build_ext.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/cuda/: Windows-env.sh
.github/workflows/: build_wheels.yml
.github/workflows/cuda/: Linux.sh  macOS-env.sh
examples/: deform_conv_modules_example.py  deform_conv_transpose_modules_example.py  test_deform_conv.py  test_deform_conv_transpose.py
packaging/wheel/: relocate.py
references/classification/cifar/: data.py  main.py
references/classification/cifar/models/: __init__.py  vgg.py
references/classification/cifar/utils/: common.py  train.py
test/: test_all_ops.py  test_deform_conv2d.py
tests/: test_compatibility_with_torchvision.py  test_deform_conv2d.py  test_grad.py  test_speed.py
tests/utils/: deform_conv_test_args.py  time_meter.py
tools/: audit_torch_extension.py  build_requirements.txt  prepare_build_environment_linux.sh  prepare_build_environment_macos.sh  prepare_build_environment_windows.sh  test_install_cuda_linux.sh
tools/packaging/: audit_torch_extension.py  build_requirements.txt  prepare_build_environment_linux.sh  prepare_build_environment_macos.sh  prepare_build_environment_windows.sh
tvdcn/: __init__.py  _extensions.py  _types.py  deform_conv.py  deform_conv_transpose.py  extension.py  setup.py  utils.py
tvdcn/csrc/: DeformConv.h  macros.h  tvdcn.cpp  tvdcn.h  vision.cpp
tvdcn/csrc/cpu/: DeformConv1d_cpu.cpp  DeformConv2d_cpu.cpp  DeformConv3d_cpu.cpp  DeformConv_cpu.h  vision_cpu.h
tvdcn/csrc/cuda/: DeformConv1d_cuda.cu  DeformConv2d_cuda.cu  DeformConv3d_cuda.cu  DeformConv_cuda.h  cuda_helpers.h  vision_cuda.h
tvdcn/csrc/ops/: deform_conv.h  deform_conv1d.cpp  deform_conv1d.h  deform_conv1d_kernels.cpp  deform_conv1d_kernels.h  deform_conv2d.cpp  deform_conv2d.h  deform_conv2d_kernels.cpp  deform_conv2d_kernels.h  deform_conv3d.cpp  deform_conv3d.h  deform_conv3d_kernels.cpp  deform_conv3d_kernels.h  deform_conv_transpose.h  deform_conv_transpose1d.cpp  deform_conv_transpose1d.h  deform_conv_transpose2d.cpp  deform_conv_transpose2d.h  deform_conv_transpose3d.cpp  deform_conv_transpose3d.h  ops.h
tvdcn/csrc/ops/autocast/: deform_conv1d_kernel.cpp  deform_conv2d_kernel.cpp  deform_conv3d_kernel.cpp  deform_conv_transpose1d_kernel.cpp  deform_conv_transpose2d_kernel.cpp  deform_conv_transpose3d_kernel.cpp
tvdcn/csrc/ops/autograd/: deform_conv1d_kernel.cpp  deform_conv2d_kernel.cpp  deform_conv3d_kernel.cpp  deform_conv_transpose1d_kernel.cpp  deform_conv_transpose2d_kernel.cpp  deform_conv_transpose3d_kernel.cpp
tvdcn/csrc/ops/cpu/: atomic.h  cpu_helpers.h  deform_conv1d_common_kernels.cpp  deform_conv1d_common_kernels.h  deform_conv1d_kernel.cpp  deform_conv1d_kernels_cpu.cpp  deform_conv1d_kernels_cpu.h  deform_conv2d_common_kernels.cpp  deform_conv2d_common_kernels.h  deform_conv2d_kernel.cpp  deform_conv2d_kernels_cpu.cpp  deform_conv2d_kernels_cpu.h  deform_conv3d_common_kernels.cpp  deform_conv3d_common_kernels.h  deform_conv3d_kernel.cpp  deform_conv3d_kernels_cpu.cpp  deform_conv3d_kernels_cpu.h  deform_conv_transpose1d_kernel.cpp  deform_conv_transpose2d_kernel.cpp  deform_conv_transpose3d_kernel.cpp
tvdcn/csrc/ops/cuda/: cuda_helpers.h  deform_conv1d_common_kernels.cu  deform_conv1d_common_kernels.h  deform_conv1d_kernel.cpp  deform_conv1d_kernels_cuda.cu  deform_conv1d_kernels_cuda.h  deform_conv2d_common_kernels.cu  deform_conv2d_common_kernels.h  deform_conv2d_kernel.cpp  deform_conv2d_kernels_cuda.cu  deform_conv2d_kernels_cuda.h  deform_conv3d_common_kernels.cu  deform_conv3d_common_kernels.h  deform_conv3d_kernel.cpp  deform_conv3d_kernels_cuda.cu  deform_conv3d_kernels_cuda.h  deform_conv_transpose1d_kernel.cpp  deform_conv_transpose2d_kernel.cpp  deform_conv_transpose3d_kernel.cpp
tvdcn/csrc/ops/dispatch/: deform_conv1d_kernels.cpp  deform_conv1d_kernels.h  deform_conv2d_kernels.cpp  deform_conv2d_kernels.h  deform_conv3d_kernels.cpp  deform_conv3d_kernels.h
tvdcn/csrc/ops/utils/: dispatch.h  ntuple.h  parallel_helpers.h  tensor_utils.cpp  tensor_utils.h
tvdcn/ops/: __init__.py  deform_conv.py  deform_conv_transpose.py  mask_activation.py
tvdcn/ops/activations/: __init__.py  mask_sigmoid.py  mask_softmax.py
