#[build-system]
#requires = [
#    "setuptools>=42",
#    "wheel",
#    "--find-links https://download.pytorch.org/whl/cu118; sys_platform == \"linux\" or sys_platform == \"win32\"",
#    "torch>=1.8"
#]

[tool.cibuildwheel]
#build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
build = ["cp38-*"]
archs = ["auto64"]
skip = ["*-musllinux_*", "*-win32", "*-manylinux_i686"]
#build-frontend = "build"

[tool.cibuildwheel.linux]
before-all = "tools/prepare_build_environment_linux.sh"
before-build = "pip install torch>=1.8 --index-url https://download.pytorch.org/whl/cu118"
environment = "FORCE_CUDA='1' PIP_NO_BUILD_ISOLATION='0' TORCH_CUDA_ARCH_LIST='6.1 7.5+PTX'"
repair-wheel-command = ""

[tool.cibuildwheel.windows]
before-all = "bash tools/prepare_build_environment_windows.sh"
before-build = "pip install torch>=1.8 --index-url https://download.pytorch.org/whl/cu118"
environment = "FORCE_CUDA='1' PIP_NO_BUILD_ISOLATION='0' TORCH_CUDA_ARCH_LIST='6.1 7.5+PTX'"
repair-wheel-command = ""

[tool.cibuildwheel.macos]
before-all = "tools/prepare_build_environment_macos.sh"
before-build = "pip install torch>=1.8"
repair-wheel-command = ""
