[metadata]
name = tvdcn
description = Torchvision Deformable Convolutional Networks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/tvdcn
download_urls = https://test_pypi.org/project/tvdcn
project_urls =
    Source = https://github.com/inspiros/tvdcn
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = deform_conv; deformable convolution

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires = torch
install_requires = torch

[options.extras_require]
examples = tqdm
tests = tqdm

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* = *.h, *.hpp, *.cuh, *.c, *.cpp, *.cu, *.
