[metadata]
name = tvdcn
description = Torchvision+ Deformable Convolutional Networks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/tvdcn
download_urls = https://test_pypi.org/project/tvdcn
project_urls =
    Source = https://github.com/inspiros/tvdcn
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA :: 12
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = deform_conv,deform_conv_transposed,deformable_convolution,transposed_deformable_convolution

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
setup_requires = torch>=2.7.0,<2.8.0
install_requires = torch>=2.7.0,<2.8.0

[options.extras_require]
examples = tqdm
tests = tqdm; torchvision

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* = *.h, *.hpp, *.cuh, *.c, *.cpp, *.cu, *.
